k8s/leveling-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leveling
spec:
  selector:
    app: leveling
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
