k8s/leveling-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leveling
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: traefik
  rules:
    - host: leveling.mancas.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: leveling
                port:
                  number: 80
  tls:
    - hosts:
        - leveling.mancas.me
      secretName: leveling-mancas-me-tls
